--- a/style.css
+++ b/style.css
@@ -4945,6 +4945,10 @@ Version:1.0
 }
 
 
+/*=============================
+	End Footer CSS
+===============================*/
+
 /*My css*/
 
 
@@ -4970,6 +4974,6 @@ Version:1.0
 	text-align: center;
 }
 
-/*=============================
-	End Footer CSS
-===============================*/
+#admin_center{
+	width: 420px;
+}
