--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -320,7 +320,8 @@ th {
 
 label {
     display: inline-block;
-    margin-bottom: .5rem
+    margin-bottom: .5rem;
+    position: relative;
 }
 
 button {
