--- a/style.css
+++ b/style.css
@@ -4977,3 +4977,47 @@ Version:1.0
 #admin_center{
 	width: 420px;
 }
+
+
+.ele_forme_input {
+    width: 100%;
+    padding: 7px !important;
+    margin-bottom: 15px !important;
+    
+    background-color: #c2c2c247 !important;
+}
+
+#admin_center .form label span {
+    color: #ff2c18;
+    display: inline-block;
+    position: absolute;
+    right: -12px;
+    top: 4px;
+    font-size: 16px;
+}
+
+.add_item_dropdown{
+	width: 48%;
+	float: left;
+	padding-left: 5px;
+}
+
+.add_item_active input{
+	border: 0px;
+    width: 100%;
+    height: 2em;
+}
+
+.form_item_pic .add_item_pic{
+	padding: 5px 0px;
+}
+
+.btn_add_item{
+	padding-top: 15px;
+    width: 140px;
+    margin: 0px auto;
+}
+
+.btn_add_item input{
+    width: 100%;
+}
